Fix spacing in Header

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 .header {
-  top: -48px;
+  top: -42px;
   transition: box-shadow 0.2s ease-in-out 0s;
 }
 
